# my_projects

Hotel/: BDTables.sql
Hotel/ClientForHotel/: ClientForHotel.sln
Hotel/ClientForHotel/ClientForHotel/: AllForms.cs  Anketa.Designer.cs  Anketa.cs  Authorisation.Designer.cs  Authorisation.cs  Booked.Designer.cs  Booked.cs  Booking.cs  BookingSettle.Designer.cs  BookingSettle.cs  ChangePass.Designer.cs  ChangePass.cs  CleanerMenu.Designer.cs  CleanerMenu.cs  CleanerMenu.resx  ClientForHotel.csproj  Connection.cs  CurrentProfile.cs  FaceSettling.Designer.cs  FaceSettling.cs  GuestCommands.cs  InfoBooking.Designer.cs  InfoBooking.cs  InfoBooking.resx  InfoGuests.Designer.cs  InfoGuests.cs  InfoGuests.resx  InfoNumbers.Designer.cs  InfoNumbers.cs  InfoNumbers.resx  MenuGuest.Designer.cs  MenuGuest.cs  Number.cs  Offers.Designer.cs  Offers.cs  Offers.resx  Profile.Designer.cs  Profile.cs  Program.cs  ReceptionistMenu.Designer.cs  (+16 more)
Hotel/ClientForHotel/ClientForHotel/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Hotel/ServerForHotel/: ServerForHotel.sln
Hotel/ServerForHotel/ServerForHotel/: ClientObject.cs  DB.cs  DBSet.cs  Program.cs  Role.cs  ServerForHotel.csproj
Hotel/ServerForHotel/ServerForHotel/Properties/: AssemblyInfo.cs
RecipePuppy/src/: ConsoleHelper.java  Recipe.java  RecipeFinder.java
archiver/: CMakeLists.txt  archive.cpp  archive.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
